# ml-sandbox

./: .gitignore  DATASETS_README.md  Dockerfile  README.md  TODO.txt  api_example.py  demo_input_data.py  docker-compose.yml  example_datasets.py  pyproject.toml  requirements-cpu.txt  requirements.txt  test.py  test_datasets.py
i2dl/ex10/: 1_segmentation_nn.ipynb
i2dl/ex10/exercise_code/networks/: segmentation_nn.py
i2dl/ex3/: 1_cifar10-image-dataset.ipynb  2_dataloader.ipynb
i2dl/ex3/exercise_code/data/: dataloader.py  image_folder_dataset.py  transforms.py
i2dl/ex4/: 1_simple_classifier.ipynb  housing_data_preprocessing(optional).ipynb
i2dl/ex4/exercise_code/: solver.py
i2dl/ex4/exercise_code/networks/: classifier.py  loss.py
i2dl/ex5/: 1_NeuralNetworks.ipynb
i2dl/ex5/exercise_code/networks/: layer.py  optimizer.py
i2dl/ex6/: 1_cifar10_classification.ipynb  1_cifar10_classification_OG.ipynb
i2dl/ex6/exercise_code/: solver.py
i2dl/ex6/exercise_code/networks/: classification_net.py  layer.py
i2dl/ex8/: 1_Autoencoder.ipynb
i2dl/ex8/exercise_code/: layers.py  models.py
i2dl/ex9/: 1_facial_keypoints.ipynb  Optional-spatial_batchnorm.ipynb
i2dl/ex9/exercise_code/networks/: keypoint_nn.py  test.py
notebooks/: sample_autoencoder.ipynb  test.py  welcome.ipynb
src/: __init__.py  input_data_example.ipynb
src/input_data/: README.md  __init__.py  base.py  cifar10.py  datasets.py  downloaders.py  enums.py  fashion_mnist.py  mnist.py  plots.py  storage.py
src/input_data/downloaders/: __init__.py  datasets.py  extract.py  fetch.py
src/input_data/implementations/: __init__.py  cifar10.py  fashion_mnist.py  mnist.py
src/input_data/structure/: __init__.py  base.py  plots.py  storage.py
src/models/: __init__.py  autoencoder.py
src/trainer/: __init__.py  early_stopping.py  regularization.py  trainer.py
src/trainer/log_utils/: __init__.py  logger.py  writer.py
src/utils/: __init__.py  datasets.py
src/utils/input_data/: __init__.py  datasets.py  downloaders.py  enums.py
tests/: README.md  __init__.py  conftest.py  test_datasets.py  test_plots.py
